fix: Correct the hight of app on mobile

--- a/website/style.css
+++ b/website/style.css
@@ -24,7 +24,7 @@ body {
     display: grid;
     grid-template-rows: 1fr auto auto auto;
     grid-template-columns: 1fr;
-    height: 100%;
+    min-height: 100%;
     background: var(--color1);
     color: var(--color2);
     justify-content: center;
@@ -180,7 +180,7 @@ button:focus {
 
     #app {
         width: 70vw;
-        height: auto;
+        min-height: auto;
         grid-template-columns: 200px 1fr;
         grid-template-rows: auto;
 
